[package]
name = "nexus_rbd2d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform 2D GPU-accelerated rigid-body physics."
repository = "https://github.com/dimforge/nexus"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "nexus_rbd2d"
path = "../../src_rbd/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
] }

[features]
default = ["dim2", "f32", "webgpu"]
dim2 = []
f32 = []
f64 = []
webgpu = ["khal/webgpu"]
vulkan = ["khal/vulkan"]
from_rapier = ["rapier2d", "parry2d"]

[dependencies]
nexus_rbd_shaders2d = { path = "../nexus_rbd_shaders2d" }
glamx = { version = "0.1", default-features = false, features = ["nostd-libm", "bytemuck", "encase"] }
include_dir = "0.7"
khal = { version = "0.2", features = ["derive"] }
vortx = "0.2"
bytemuck = { version = "1", features = ["derive"] }
encase = "0.12"
bvh = "0.7"
num-traits = "0.2"
web-time = "1"

# Optional dependencies for rapier/parry interop
rapier2d = { version = "0.32", optional = true }
parry2d = { version = "0.26", optional = true }

[dev-dependencies]
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
rand = "0.9"

[build-dependencies]
walkdir = "2"
