[package]
name = "nexus_rbd2d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform 2D GPU-accelerated rigid-body physics."
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "nexus_rbd2d"
path = "../../src_rbd/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
] }

[features]
default = ["dim2", "f32", "webgpu"]
dim2 = []
f32 = []
f64 = []
webgpu = ["khal/webgpu"]
from_rapier = ["rapier2d", "parry2d"]
cpu = ["nexus_rbd_shaders2d/cpu", "vortx/cpu"]
cpu-parallel = ["cpu", "vortx/cpu-parallel"]

[dependencies]
nexus_rbd_shaders2d = { path = "../nexus_rbd_shaders2d" }
glamx = { workspace = true }
include_dir = { workspace = true }
khal = { workspace = true }
vortx = { workspace = true }
bytemuck = { workspace = true }
web-time = { workspace = true }
bvh = "0.7"

# Optional dependencies for rapier/parry interop
rapier2d = { version = "0.32", optional = true }
parry2d = { version = "0.26", optional = true }

[dev-dependencies]
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
rand = "0.9"

[build-dependencies]
walkdir = "2"
