[package]
name = "nexus_rbd3d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform 3D GPU-accelerated rigid-body physics."
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "nexus_rbd3d"
path = "../../src_rbd/lib.rs"
required-features = ["dim3"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2"))',
] }

[features]
default = ["dim3", "f32", "webgpu"]
dim3 = []
f32 = []
f64 = []
webgpu = ["khal/webgpu"]
from_rapier = ["rapier3d", "parry3d"]
cpu = ["nexus_rbd_shaders3d/cpu", "vortx/cpu"]
cpu-parallel = ["cpu", "vortx/cpu-parallel", "nexus_rbd_shaders3d/cpu-parallel"]
cuda = ["khal/cuda", "khal-builder/cuda", "nexus_rbd_shaders3d/cuda"]

[dependencies]
nexus_rbd_shaders3d = { path = "../nexus_rbd_shaders3d" }
glamx = { workspace = true }
include_dir = { workspace = true }
khal = { workspace = true }
vortx = { workspace = true }
bytemuck = { workspace = true }
web-time = { workspace = true }
bvh = "0.7"

# Optional dependencies for rapier/parry interop
rapier3d = { version = "0.32", optional = true, features = ["bytemuck"] }
parry3d = { version = "0.26", optional = true }

[dev-dependencies]
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
rand = "0.9"

[build-dependencies]
khal-builder = {workspace = true}