[package]
name = "nexus_rbd3d"
authors = { workspace = true }
description = "Cross-platform 3D GPU-accelerated rigid-body physics."
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
exclude = { workspace = true }

[lib]
name = "nexus_rbd3d"
path = "../../src_rbd/lib.rs"
required-features = ["dim3"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2"))',
] }

[features]
default = ["dim3", "f32", "webgpu"]
dim3 = []
f32 = []
f64 = []
webgpu = ["khal/webgpu"]
metal = ["khal/metal"]
cpu = ["nexus_rbd_shaders3d/cpu", "vortx/cpu"]
cpu-parallel = ["cpu", "vortx/cpu-parallel", "nexus_rbd_shaders3d/cpu-parallel"]
cuda = ["khal/cuda", "khal-builder/cuda", "nexus_rbd_shaders3d/cuda"]

[dependencies]
nexus_rbd_shaders3d = { workspace = true }
glamx = { workspace = true }
include_dir = { workspace = true }
khal = { workspace = true }
vortx = { workspace = true }
bytemuck = { workspace = true }
web-time = { workspace = true }
bvh = { workspace = true }
futures = { workspace = true }

# Optional dependencies for rapier/parry interop
rapier3d = { workspace = true, features = ["default", "bytemuck"] }
parry3d = { workspace = true, features = ["default"] }

[dev-dependencies]
futures-test = { workspace = true }
serial_test = { workspace = true }
approx = { workspace = true }
rand = { workspace = true }

[build-dependencies]
khal-builder = {workspace = true}
nexus_rbd_shaders3d = { workspace = true }