[package]
name = "nexus_rbd_shaders2d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "2D GPU shaders for nexus physics engine (rust-gpu)."
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
links = "nexus_rbd_shaders2d"
build = "build.rs"

[lib]
path = "../../src_rbd_shaders/lib.rs"

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
    'cfg(target_arch, values("spirv", "nvptx64"))',
    'cfg(target_arch_is_gpu)',
] }

[features]
default = ["dim2"]
dim2 = []
unsafe_remove_boundchecks = ["vortx-shaders/unsafe_remove_boundchecks"]
push_constants = []
cpu = []
cpu-parallel = ["cpu", "vortx-shaders/cpu-parallel"]
cuda = []

[dependencies]
vortx-shaders = { workspace = true }
khal-std = { workspace = true }
unroll = { workspace = true }
crunchy = { workspace = true }
glamx = { workspace = true }
parry2d = { version = "0.26", default-features = false, features = ["dim2","f32"] }
rapier2d = { version = "0.32", default-features = false, features = ["dim2","f32","bytemuck"] }

[build-dependencies]
khal-std = { workspace = true }

# Host-only dependencies (excluded on GPU targets: spirv, nvptx64).
[target.'cfg(not(any(target_arch = "spirv", target_arch = "nvptx64")))'.dependencies]
bytemuck = { workspace = true }
khal = { workspace = true }
