[package]
name = "nexus_rbd_shaders3d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "3D GPU shaders for nexus physics engine (rust-gpu)."
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
exclude = { workspace = true }
links = "nexus_rbd_shaders3d"
build = "build.rs"

[lib]
path = "../../src_rbd_shaders/lib.rs"

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2"))',
    'cfg(target_arch, values("spirv", "nvptx64"))',
    'cfg(target_arch_is_gpu)',
] }

[features]
default = ["dim3"]
dim3 = []
unsafe_remove_boundchecks = ["vortx-shaders/unsafe_remove_boundchecks"]
push_constants = []
cpu = []
cpu-parallel = ["cpu", "vortx-shaders/cpu-parallel"]
cuda = []
cuda-oxide = ["khal-std/cuda-oxide", "vortx-shaders/cuda-oxide"]

[dependencies]
vortx-shaders = { workspace = true }
khal-std = { workspace = true }
unroll = { workspace = true }
crunchy = { workspace = true }
glamx = { workspace = true }
# Cap glam < 0.33 for the shader build: spirv-std 0.10.0-alpha.1 declares glam ">=0.30.8"
# (open-ended), but glam 0.33 dropped `UVec4` under default-features=false, which breaks
# spirv-std's compile (112 errors). 0.32.1 is the newest pre-0.33 version that still works.
# (Same pin as vortx-shaders; needed here too so cargo-gpu's per-shader-crate build sees it.)
glam = { version = "=0.32.1", default-features = false }
parry3d = { version = "0.26", default-features = false, features = ["dim3","f32"] }
rapier3d = { version = "0.32", default-features = false, features = ["dim3","f32","bytemuck"] }

[build-dependencies]
khal-std = { workspace = true }

# Host-only dependencies (excluded on GPU targets: spirv, nvptx64).
[target.'cfg(not(any(target_arch = "spirv", target_arch = "nvptx64")))'.dependencies]
bytemuck = { workspace = true }
khal = { workspace = true }