[package]
name = "nexus_testbed2d"
version = "0.4.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "Testbed for 2D GPU physics demos with nexus."
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "nexus_testbed2d"
path = "../../src_testbed/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
] }

[features]
default = ["dim2", "webgpu"]
dim2 = []
webgpu = ["khal/webgpu"]

[dependencies]
glamx = { version = "0.1", default-features = false }
khal = { version = "0.2", features = ["derive"] }
vortx = "0.2"
nexus_rbd2d = { path = "../nexus_rbd2d", features = ["from_rapier"] }
rapier2d = "0.32"
bytemuck = { version = "1", features = ["derive"] }
kiss3d = { version = "0.40", features = ["egui"] }
web-time = "1"
