[package]
name = "nexus_testbed2d"
version = "0.4.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "Testbed for 2D GPU physics demos with nexus."
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "nexus_testbed2d"
path = "../../src_testbed/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3", "cpu", "cuda"))',
] }

[features]
default = ["dim2", "webgpu"]
dim2 = []
webgpu = ["khal/webgpu"]
cpu = ["nexus2d/cpu", "vortx/cpu"]
cpu-parallel = ["cpu", "nexus2d/cpu-parallel", "vortx/cpu-parallel"]
cuda = ["nexus2d/cuda"]

[dependencies]
nexus2d = { path = "../nexus2d", features = ["rbd", "mpm", "fem", "from_rapier"]}
glamx = { version = "0.2", default-features = false }
khal = { workspace = true }
vortx = { workspace = true }
rapier2d = "0.32"
bytemuck = { version = "1", features = ["derive"] }
kiss3d = { version = "0.41", features = ["egui"] }
web-time = "1"
