[package]
name = "nexus_viewer2d"
version = "0.4.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "Viewer for 2D GPU physics demos with nexus."
edition = { workspace = true }
license = { workspace = true }
exclude = { workspace = true }
repository = { workspace = true }

[lib]
name = "nexus_viewer2d"
path = "../../src_viewer/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3", "cpu", "cuda", "metal"))',
] }

[features]
default = ["dim2", "webgpu"]
dim2 = []
webgpu = ["khal/webgpu"]
metal = ["khal/metal", "nexus2d/metal"]
cpu = ["nexus2d/cpu", "vortx/cpu"]
cpu-parallel = ["cpu", "nexus2d/cpu-parallel", "vortx/cpu-parallel"]
cuda = ["nexus2d/cuda"]

[dependencies]
nexus2d = { workspace = true, features = ["rbd"]}
glamx = { workspace = true }
khal = { workspace = true }
vortx = { workspace = true }
rapier2d = { workspace = true, features = ["default"] }
bytemuck = { workspace = true }
kiss3d = { workspace = true, features = ["egui"] }
web-time = { workspace = true }
